<resources>
    <string name="app_name">arithmetic-hw2</string>
    <string name="welcome">Welcome!</string>
    <string name="hint1">First number</string>
    <string name="hint2">Second number</string>
    <string name="addition">+(addition)</string>
    <string name="subtraction">-(subtraction)</string>
    <string name="multiplication">*(multiplication)</string>
    <string name="division">/(division)</string>
    <string name="modulus">%(modulus)</string>
    <string name="button">Calculate</string>
</resources>